Final version of sentiment analysis service